@@ -1,3 +1,8 @@
+2008-04-24  Tobias C. Rittweiler  <tcr@freebits.de>
+
+	* swank-backend.lisp: Clarified docstrings of interface functions
+	in the Debugging section.
+
 2008-04-23  Geo Carncross  <geocar@gmail.com>
 
 	* swank-source-file-cache.lisp (skip-comments-and-whitespace):
